--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "C_Cpp.default.compilerPath": "C:\\w64devkit\\bin\\g++.exe"
+    "C_Cpp.default.compilerPath": "C:\\w64devkit\\bin\\g++.exe",
+    "files.associations": {
+        "iostream": "cpp"
+    }
 }
